# haskell-h99

./: .gitignore  .travis.yml  README.md  haskell-h99.cabal
src/H99/: Q11to20.hs  Q1to10.hs
test/: Test.hs
